--- a/.github/workflows/autorerun.yaml
+++ b/.github/workflows/autorerun.yaml
@@ -2,13 +2,19 @@ name: Autorerun
 
 on:
   schedule:
-    - cron: '0 0 * * *' # TODO
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
   rerun:
     runs-on: ubuntu-latest
     steps:
+      - uses: plengauer/opentelemetry-bash/actions/instrument/job@v5.7.5
+        with:
+          secrets_to_redact: '${{ toJSON(secrets) }}'
+        env:
+          OTEL_EXPORTER_OTLP_ENDPOINT: '${{ secrets.OTEL_EXPORTER_OTLP_ENDPOINT }}'
+          OTEL_EXPORTER_OTLP_HEADERS: '${{ secrets.OTEL_EXPORTER_OTLP_HEADERS }}'
       - uses: plengauer/autorerun@v0.19.0
         with:
           github_token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
