--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Publish
+name: CI
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
       
 jobs:
-  publish:
+  ci:
     runs-on: ubuntu-latest
     permissions:
       contents: write
