--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,10 +1,8 @@
 name: Publish
 
 on:
-  push:
-    branches: main
-    paths:
-      - .github/workflows/publish.yml
+  release:
+    types: published
       
 jobs:
   publish:
