--- a/.github/workflows/autorerun.yaml
+++ b/.github/workflows/autorerun.yaml
@@ -1,9 +1,11 @@
 name: Autorerun
 
 on:
+  workflow_run:
+    workflows: ['CI', 'Publish']
+    types: completed
   schedule:
-    - cron: '0 0 * * *'
-  workflow_dispatch:
+    - cron: '0 0 * * *' # TODO when to run
 
 jobs:
   rerun:
